# inertia-rs

./: .gitignore  Cargo.toml  README.md  pyproject.toml
src/: lib.rs  python-module.rs  python_module.rs
tests/: system.rs
